2011-04-15  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-09

2011-04-13  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-08
	* add functions to discard orphaned cells

2011-01-19  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-07
	* added method to discard from RB side
	
2010-11-03  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-05-00 Increase  nClientsMax_ to 128 for > 8 cores

2010-11-03  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-06 used by Bill (for BuildFile -> xml)

2010-09-08  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-05 fix from Remi (add 1 to GT LS number)

2010-09-08  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-04 Remi's patch to add LS to error event 

2010-05-17  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-03 change EMPTY to STOP event type for stopping
	
2010-01-20  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-02 bug fix: more assert fixes for EOL handling

2010-01-15  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-01 bug fix: assert in rawCellToRead did not contain EOLS
	
2010-01-11  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-00 Augmented API to generate END-OF-LS events

2009-11-10  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-07-07 Modified the noarg version of 
	scheduleRawEmptyCellForDiscard used by the RB to signal the discard 
	thread upon stop. Previously, this caused a crash of the RB

2009-10-28  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-07-06 (V00-07-05 used by andreas for undocumented fixes for 
	64-bit compilation)
	* shmem and sem keys assigned by uid
	* ShmBuffer always tries to remove existing shm segments for same uid
	
2009-08-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-04
	* src/FUShmRawCell.cc (NSUPERFRAG_MAX): set maximum number of
	superfragments to 80. It used to be 64, but the actual number of
	superfragments these days exceeds 64 already. The hard limit is
	80.
