@@ -358,9 +358,9 @@ FUShmRawCell* FUShmBuffer::rawCellToDiscard()
 	 ||state==evt::SENT
 	 ||state==evt::EMPTY
 	 ||state==evt::STOP
-	 ||state==evt::LUMISECTION);
+	 ||state==evt::USEDLS);
   if (state!=evt::EMPTY 
-      && state!=evt::LUMISECTION
+      && state!=evt::USEDLS
       && state!=evt::STOP
       ) 
     setEvtState(cell->index(),evt::DISCARDING);
@@ -430,6 +430,7 @@ void FUShmBuffer::scheduleRawCellForDiscard(unsigned int iCell)
 	   ||state==evt::LUMISECTION
 	   );
     if (state==evt::PROCESSING) setEvtState(iCell,evt::PROCESSED);
+    if (state==evt::LUMISECTION) setEvtState(iCell,evt::USEDLS);
     postRawDiscarded();
   }
   else postRawDiscard();
@@ -512,7 +513,8 @@ void FUShmBuffer::releaseRawCell(FUShmRawCell* cell)
      ||state==evt::RAWWRITING
      ||state==evt::EMPTY
      ||state==evt::STOP
-     ||state==evt::LUMISECTION
+     //     ||state==evt::LUMISECTION
+     ||state==evt::USEDLS
      )) std::cout << "=================releaseRawCell state " << state 
 		  << std::endl;
 
@@ -521,7 +523,8 @@ void FUShmBuffer::releaseRawCell(FUShmRawCell* cell)
 	 ||state==evt::RAWWRITING
 	 ||state==evt::EMPTY
 	 ||state==evt::STOP
-	 ||state==evt::LUMISECTION
+	 //	 ||state==evt::LUMISECTION
+	 ||state==evt::USEDLS
 	 );
   setEvtState(cell->index(),evt::EMPTY);
   setEvtDiscard(cell->index(),0);
@@ -542,6 +545,7 @@ void FUShmBuffer::writeRawEmptyEvent()
   evt::State_t state=evtState(cell->index());
   assert(state==evt::RAWWRITING);
   setEvtState(cell->index(),evt::STOP);
+  cell->setEventTypeStopper();
   postRawIndexToRead(cell->index());
   if (segmentationMode_) shmdt(cell);
   postRawRead();
@@ -555,6 +559,7 @@ void FUShmBuffer::writeRawLumiSectionEvent(unsigned int ls)
   evt::State_t state=evtState(cell->index());
   assert(state==evt::RAWWRITING);
   setEvtState(cell->index(),evt::LUMISECTION);
+  cell->setEventTypeEol();
   postRawIndexToRead(cell->index());
   if (segmentationMode_) shmdt(cell);
   postRawRead();
@@ -593,6 +598,7 @@ void FUShmBuffer::scheduleRawEmptyCellForDiscard()
   FUShmRawCell* cell=rawCellToWrite();
   rawDiscardIndex_=cell->index();
   setEvtState(cell->index(),evt::STOP);
+  cell->setEventTypeStopper();
   setEvtNumber(cell->index(),0xffffffff);
   setEvtPrcId(cell->index(),0);
   setEvtTimeStamp(cell->index(),0);
@@ -606,10 +612,13 @@ void FUShmBuffer::scheduleRawEmptyCellForDiscard(FUShmRawCell* cell)
   waitRawDiscard();
   if (rawCellReadyForDiscard(cell->index())) {
     rawDiscardIndex_=cell->index();
-    setEvtState(cell->index(),evt::STOP);
-    setEvtNumber(cell->index(),0xffffffff);
-    setEvtPrcId(cell->index(),0);
-    setEvtTimeStamp(cell->index(),0);
+    // as this function is called by the reader, the state and type should 
+    // already be correct
+    //    setEvtState(cell->index(),evt::STOP);
+    //    cell->setEventType(evt::STOPPER);
+    //    setEvtNumber(cell->index(),0xffffffff);
+    //    setEvtPrcId(cell->index(),0);
+    //    setEvtTimeStamp(cell->index(),0);
     removeClientPrcId(getpid());
     if (segmentationMode_) shmdt(cell);
     postRawDiscarded();
@@ -623,10 +632,11 @@ void FUShmBuffer::scheduleRawEmptyCellForDiscardServerSide(FUShmRawCell* cell)
   //  waitRawDiscard();
   if (rawCellReadyForDiscard(cell->index())) {
     rawDiscardIndex_=cell->index();
-    setEvtState(cell->index(),evt::STOP);
-    setEvtNumber(cell->index(),0xffffffff);
-    setEvtPrcId(cell->index(),0);
-    setEvtTimeStamp(cell->index(),0);
+    //    setEvtState(cell->index(),evt::STOP);
+    //    cell->setEventType(evt::STOPPER);
+    //    setEvtNumber(cell->index(),0xffffffff);
+    //    setEvtPrcId(cell->index(),0);
+    //    setEvtTimeStamp(cell->index(),0);
     //    removeClientPrcId(getpid());
     if (segmentationMode_) shmdt(cell);
     postRawDiscarded();
